--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,10 @@ langchain-openai>=0.0.5
 langchain-community>=0.0.20
 langchain-core>=0.1.0
 
+# HuggingFace Dataset (V2)
+datasets>=2.14.0
+huggingface-hub>=0.19.0
+
 # Vector Store
 faiss-cpu>=1.7.4
 numpy>=1.24.0
