--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,44 @@
-# Core Dependencies (pinned versions for security)
-langchain==0.1.13
-langchain-openai==0.0.8
-langchain-community==0.0.29
-langchain-core==0.1.31
+# Core Dependencies - Compatible versions (Feb 2026)
+langchain>=0.3.0,<1.0.0
+langchain-core>=0.3.0,<1.0.0
+langchain-community>=0.3.0,<1.0.0
+langchain-text-splitters>=0.3.0,<1.0.0
+
+# Default Provider: OpenAI (also works with OpenAI-compatible APIs like LiteLLM proxy)
+langchain-openai>=0.3.0,<1.0.0
+
+# 🔥 LiteLLM - Universal interface for 100+ providers (RECOMMENDED)
+# Note: If using LiteLLM proxy server, you don't need to install this client-side
+# litellm>=1.30.0
+
+# Optional Providers (install as needed)
+# Anthropic Claude
+# langchain-anthropic>=0.1.0
+
+# Google Gemini
+# langchain-google-genai>=1.0.0
+
+# HuggingFace Models
+langchain-huggingface>=0.3.0,<1.0.0
+
+# Cohere
+# langchain-cohere>=0.1.0
+
+# AWS Bedrock
+# langchain-aws>=0.1.0
 
 # HuggingFace Dataset
-datasets==2.16.1
-huggingface-hub==0.20.3
+datasets>=4.0.0
+huggingface-hub>=0.36.0
+tokenizers>=0.21,<0.22  # Required by transformers
 
 # Vector Store
-faiss-cpu==1.7.4
-numpy==1.24.4
+faiss-cpu>=1.7.0
+numpy>=1.24.0,<2.0.0
 
-# Embeddings (alternative)
-sentence-transformers==2.5.1
+# Embeddings
+sentence-transformers>=2.5.0  # Local embeddings
+transformers>=4.0.0  # Required by sentence-transformers
 
 # API Service
 fastapi==0.109.2
@@ -28,21 +53,22 @@ cryptography==42.0.2  # Encryption utilities
 prometheus-client==0.19.0
 
 # Tools
-duckduckgo-search==4.4.3
+duckduckgo-search>=4.0.0
 
 # Utilities
-python-dotenv==1.0.1
-requests==2.31.0
+python-dotenv>=1.0.0
+requests>=2.31.0
 
+# Development Dependencies (optional)
 # Security Auditing (dev/CI)
-pip-audit>=2.7.0
-safety>=3.0.0
+# pip-audit>=2.7.0
+# safety>=3.0.0
 
-pytest>=7.4.0
-pytest-cov>=4.1.0
-black>=23.12.0
-flake8>=7.0.0
-mypy>=1.8.0
+# Testing
+# pytest>=7.4.0
+# pytest-cov>=4.1.0
 
-# Optional: Azure OpenAI
-azure-openai>=1.0.0
+# Code Quality
+# black>=23.12.0
+# flake8>=7.0.0
+# mypy>=1.8.0
